replaced old framework with app taxonomy